--- a/gyakorlat02_feladatok .ipynb
+++ b/gyakorlat02_feladatok .ipynb
@@ -46,62 +46,20 @@
             },
             "outputs": [
                 {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "(3 rows affected)"
-                    },
-                    "metadata": {}
+                    "output_type": "error",
+                    "evalue": "Msg 208, Level 16, State 1, Line 2\r\nInvalid object name 'kolcsonzesek'.",
+                    "ename": "",
+                    "traceback": []
                 },
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.009"
+                        "text/html": "Total execution time: 00:00:00.003"
                     },
                     "metadata": {}
-                },
-                {
-                    "output_type": "execute_result",
-                    "metadata": {},
-                    "execution_count": 16,
-                    "data": {
-                        "application/vnd.dataresource+json": {
-                            "schema": {
-                                "fields": [
-                                    {
-                                        "name": "ki_datum"
-                                    },
-                                    {
-                                        "name": "(No column name)"
-                                    }
-                                ]
-                            },
-                            "data": [
-                                {
-                                    "ki_datum": "2003-12-11",
-                                    "(No column name)": "3"
-                                },
-                                {
-                                    "ki_datum": "2006-10-01",
-                                    "(No column name)": "1"
-                                },
-                                {
-                                    "ki_datum": "2006-10-02",
-                                    "(No column name)": "1"
-                                }
-                            ]
-                        },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>ki_datum</th><th>(No column name)</th></tr>",
-                            "<tr><td>2003-12-11</td><td>3</td></tr>",
-                            "<tr><td>2006-10-01</td><td>1</td></tr>",
-                            "<tr><td>2006-10-02</td><td>1</td></tr>",
-                            "</table>"
-                        ]
-                    }
                 }
             ],
-            "execution_count": 16
+            "execution_count": 31
         },
         {
             "cell_type": "markdown",
@@ -500,7 +458,12 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "--tanulmányi lekérdezés\r\n",
+                "--tanulmányi adatbázis\r\n",
+                "SELECT terem, COUNT(*)\r\n",
+                "FROM Orak\r\n",
+                "GROUP by terem\r\n",
+                "having COUNT(*) >=3"
             ],
             "metadata": {
                 "azdata_cell_guid": "3e89b651-f56f-4102-af52-30eb2bbe360d",
@@ -510,19 +473,100 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Commands completed successfully."
+                        "text/html": "(11 rows affected)"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00"
+                        "text/html": "Total execution time: 00:00:00.006"
                     },
                     "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 32,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "terem"
+                                    },
+                                    {
+                                        "name": "(No column name)"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "terem": "2",
+                                    "(No column name)": "5"
+                                },
+                                {
+                                    "terem": "3",
+                                    "(No column name)": "11"
+                                },
+                                {
+                                    "terem": "4",
+                                    "(No column name)": "8"
+                                },
+                                {
+                                    "terem": "5",
+                                    "(No column name)": "5"
+                                },
+                                {
+                                    "terem": "6",
+                                    "(No column name)": "6"
+                                },
+                                {
+                                    "terem": "7",
+                                    "(No column name)": "6"
+                                },
+                                {
+                                    "terem": "8",
+                                    "(No column name)": "6"
+                                },
+                                {
+                                    "terem": "10",
+                                    "(No column name)": "3"
+                                },
+                                {
+                                    "terem": "12",
+                                    "(No column name)": "3"
+                                },
+                                {
+                                    "terem": "13",
+                                    "(No column name)": "5"
+                                },
+                                {
+                                    "terem": "14",
+                                    "(No column name)": "3"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>terem</th><th>(No column name)</th></tr>",
+                            "<tr><td>2</td><td>5</td></tr>",
+                            "<tr><td>3</td><td>11</td></tr>",
+                            "<tr><td>4</td><td>8</td></tr>",
+                            "<tr><td>5</td><td>5</td></tr>",
+                            "<tr><td>6</td><td>6</td></tr>",
+                            "<tr><td>7</td><td>6</td></tr>",
+                            "<tr><td>8</td><td>6</td></tr>",
+                            "<tr><td>10</td><td>3</td></tr>",
+                            "<tr><td>12</td><td>3</td></tr>",
+                            "<tr><td>13</td><td>5</td></tr>",
+                            "<tr><td>14</td><td>3</td></tr>",
+                            "</table>"
+                        ]
+                    }
                 }
             ],
-            "execution_count": 22
+            "execution_count": 32
         },
         {
             "cell_type": "markdown",
