--- a/gyakorlat03_feladatok.ipynb
+++ b/gyakorlat03_feladatok.ipynb
@@ -257,81 +257,83 @@
         {
             "cell_type": "code",
             "source": [
-                "SELECT n.nap, COUNT(*)\r\n",
+                "SELECT n.nap, COUNT(*) as 'orakszama'\r\n",
                 "FROM Orak o JOIN Napok n ON o.nap = n.nap_id\r\n",
-                "GROUP BY n.nap\r\n",
-                "ORDER BY COUNT(*)"
+                "GROUP BY n.nap \r\n",
+                "ORDER BY COUNT(*) "
             ],
             "metadata": {
                 "azdata_cell_guid": "e9de5726-f036-4fb9-8c33-a873955ed886",
                 "language": "sql"
             },
             "outputs": [
-{
-    "output_type": "display_data",
-    "data": {
-        "text/html": "(5 rows affected)"
-    },
-    "metadata": {}
-}, {
-    "output_type": "display_data",
-    "data": {
-        "text/html": "Total execution time: 00:00:00.010"
-    },
-    "metadata": {}
-}, {
-    "output_type": "execute_result",
-    "metadata": {},
-    "execution_count": 4,
-    "data": {
-        "application/vnd.dataresource+json": {
-            "schema": {
-                "fields": [
-                    {
-                        "name": "nap"
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(5 rows affected)"
                     },
-                    {
-                        "name": "(No column name)"
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.011"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 8,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "nap"
+                                    },
+                                    {
+                                        "name": "orakszama"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "nap": "Péntek",
+                                    "orakszama": "6"
+                                },
+                                {
+                                    "nap": "Szerda",
+                                    "orakszama": "6"
+                                },
+                                {
+                                    "nap": "Kedd",
+                                    "orakszama": "13"
+                                },
+                                {
+                                    "nap": "Csütörtök",
+                                    "orakszama": "19"
+                                },
+                                {
+                                    "nap": "Hétfő",
+                                    "orakszama": "23"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>nap</th><th>orakszama</th></tr>",
+                            "<tr><td>Péntek</td><td>6</td></tr>",
+                            "<tr><td>Szerda</td><td>6</td></tr>",
+                            "<tr><td>Kedd</td><td>13</td></tr>",
+                            "<tr><td>Csütörtök</td><td>19</td></tr>",
+                            "<tr><td>Hétfő</td><td>23</td></tr>",
+                            "</table>"
+                        ]
                     }
-                ]
-            },
-            "data": [
-                {
-                    "nap": "Péntek",
-                    "(No column name)": "6"
-                },
-                {
-                    "nap": "Szerda",
-                    "(No column name)": "6"
-                },
-                {
-                    "nap": "Kedd",
-                    "(No column name)": "13"
-                },
-                {
-                    "nap": "Csütörtök",
-                    "(No column name)": "19"
-                },
-                {
-                    "nap": "Hétfő",
-                    "(No column name)": "23"
                 }
-            ]
-        },
-        "text/html": [
-            "<table>",
-            "<tr><th>nap</th><th>(No column name)</th></tr>",
-            "<tr><td>Péntek</td><td>6</td></tr>",
-            "<tr><td>Szerda</td><td>6</td></tr>",
-            "<tr><td>Kedd</td><td>13</td></tr>",
-            "<tr><td>Csütörtök</td><td>19</td></tr>",
-            "<tr><td>Hétfő</td><td>23</td></tr>",
-            "</table>"
-        ]
-    }
-}
-],
-            "execution_count": 4
+            ],
+            "execution_count": 8
         },
         {
             "cell_type": "markdown",
@@ -350,14 +352,134 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "SELECT okt.nev, COUNT(*) as 'orakszama'\r\n",
+                "FROM Orak o JOIN Oktatok okt on o.tanar =okt.oktato_id\r\n",
+                "            JOIN Beosztasok b on okt.beosztás = b.beosztas_id\r\n",
+                "WHERE b.beosztasnev <> 'Óraadó'\r\n",
+                "GROUP BY okt.nev"
             ],
             "metadata": {
                 "azdata_cell_guid": "6405d3e8-a9b1-45d7-aa76-3b1e785ef6cc",
                 "language": "sql"
             },
-            "outputs": [],
-            "execution_count": null
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(15 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.011"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 10,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "nev"
+                                    },
+                                    {
+                                        "name": "orakszama"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "nev": "Balkán András",
+                                    "orakszama": "3"
+                                },
+                                {
+                                    "nev": "Farkasos Piroska",
+                                    "orakszama": "7"
+                                },
+                                {
+                                    "nev": "Jogrerős Pál",
+                                    "orakszama": "2"
+                                },
+                                {
+                                    "nev": "Juhász András",
+                                    "orakszama": "2"
+                                },
+                                {
+                                    "nev": "Kiss János",
+                                    "orakszama": "4"
+                                },
+                                {
+                                    "nev": "Kovács László",
+                                    "orakszama": "4"
+                                },
+                                {
+                                    "nev": "Pelikán József",
+                                    "orakszama": "6"
+                                },
+                                {
+                                    "nev": "Róbert Gida",
+                                    "orakszama": "1"
+                                },
+                                {
+                                    "nev": "Szénási ászló",
+                                    "orakszama": "2"
+                                },
+                                {
+                                    "nev": "Szentágotai Istvás",
+                                    "orakszama": "8"
+                                },
+                                {
+                                    "nev": "Szép llonka",
+                                    "orakszama": "4"
+                                },
+                                {
+                                    "nev": "Szerb László",
+                                    "orakszama": "3"
+                                },
+                                {
+                                    "nev": "Ujfalussi István",
+                                    "orakszama": "3"
+                                },
+                                {
+                                    "nev": "Varga Kata",
+                                    "orakszama": "4"
+                                },
+                                {
+                                    "nev": "Vitéz János",
+                                    "orakszama": "4"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>nev</th><th>orakszama</th></tr>",
+                            "<tr><td>Balkán András</td><td>3</td></tr>",
+                            "<tr><td>Farkasos Piroska</td><td>7</td></tr>",
+                            "<tr><td>Jogrerős Pál</td><td>2</td></tr>",
+                            "<tr><td>Juhász András</td><td>2</td></tr>",
+                            "<tr><td>Kiss János</td><td>4</td></tr>",
+                            "<tr><td>Kovács László</td><td>4</td></tr>",
+                            "<tr><td>Pelikán József</td><td>6</td></tr>",
+                            "<tr><td>Róbert Gida</td><td>1</td></tr>",
+                            "<tr><td>Szénási ászló</td><td>2</td></tr>",
+                            "<tr><td>Szentágotai Istvás</td><td>8</td></tr>",
+                            "<tr><td>Szép llonka</td><td>4</td></tr>",
+                            "<tr><td>Szerb László</td><td>3</td></tr>",
+                            "<tr><td>Ujfalussi István</td><td>3</td></tr>",
+                            "<tr><td>Varga Kata</td><td>4</td></tr>",
+                            "<tr><td>Vitéz János</td><td>4</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 10
         },
         {
             "cell_type": "markdown",
@@ -512,14 +634,72 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "SELECT nap\r\n",
+                "FROM Napok\r\n",
+                "\r\n",
+                "EXCEPT\r\n",
+                "\r\n",
+                "SELECT n.nap\r\n",
+                "from Orak O JOIN Napok n  on o.nap = n.nap_id\r\n",
+                "            JOIN Oktatok okt on okt.oktato_id = o.tanar\r\n",
+                "WHERE okt.nev ='Pelikán József'"
             ],
             "metadata": {
                 "azdata_cell_guid": "a9cc0926-3dbd-4ed8-8179-1c39d64a0762",
                 "language": "sql"
             },
-            "outputs": [],
-            "execution_count": null
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(3 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.009"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 12,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "nap"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "nap": "Csütörtök"
+                                },
+                                {
+                                    "nap": "Péntek"
+                                },
+                                {
+                                    "nap": "Szerda"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>nap</th></tr>",
+                            "<tr><td>Csütörtök</td></tr>",
+                            "<tr><td>Péntek</td></tr>",
+                            "<tr><td>Szerda</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 12
         },
         {
             "cell_type": "markdown",
