--- a/gyakorlat05_feladatok.ipynb
+++ b/gyakorlat05_feladatok.ipynb
@@ -28,14 +28,76 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "SELECT IIF(GROUPING_ID(YEAR(r.REND_DATUM)) = 1,\r\n",
+                "         'összesen', CAST(YEAR(r.REND_DATUM) as nvarchar(4))) AS 'évek',\r\n",
+                "        SUM(rt.EGYSEGAR * rt.MENNYISEG) as 'végösszeg'\r\n",
+                "FROM Rendeles r JOIN Rendeles_tetel rt ON r.SORSZAM = rt.SORSZAM\r\n",
+                "WHERE r.LOGIN = 'norbert2'\r\n",
+                "GROUP BY rollup(YEAR(r.REND_DATUM))"
             ],
             "metadata": {
                 "azdata_cell_guid": "6ab9f633-a3b5-48c9-a1dc-4fb8235ae85b",
-                "language": "sql"
+                "language": "sql",
+                "tags": []
             },
-            "outputs": [],
-            "execution_count": null
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(3 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.019"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 10,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "évek"
+                                    },
+                                    {
+                                        "name": "végösszeg"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "évek": "2015",
+                                    "végösszeg": "483473"
+                                },
+                                {
+                                    "évek": "2017",
+                                    "végösszeg": "614340"
+                                },
+                                {
+                                    "évek": "összesen",
+                                    "végösszeg": "1097813"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>évek</th><th>végösszeg</th></tr>",
+                            "<tr><td>2015</td><td>483473</td></tr>",
+                            "<tr><td>2017</td><td>614340</td></tr>",
+                            "<tr><td>összesen</td><td>1097813</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 10
         },
         {
             "cell_type": "markdown",
